--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,4 +6,14 @@
     = javascript_include_tag "application"
     = csrf_meta_tags
   %body
-    = yield
+    .container
+      .row
+        .span12
+          %h1.festival
+            Puzzle Festival
+      .row
+        .span8
+          = yield
+        .span4
+          = render 'twitter'
+
