--- a/app/assets/stylesheets/puzzles.sass
+++ b/app/assets/stylesheets/puzzles.sass
@@ -8,3 +8,10 @@ h3
     line-height: 32px
     font-size: 24px
     color: $font-color
+
+textarea
+  width: 600px
+  height: 200px
+
+input[type='text']
+  width: 600px
