--- a/app/views/puzzles/_form.html.haml
+++ b/app/views/puzzles/_form.html.haml
@@ -9,6 +9,11 @@
     %br
     = f.text_area :content
 
+  %p
+    = f.label :answer
+    %br
+    = f.text_area :answer
+
   - if @puzzle.errors.any?
 
     #error_explanation
