--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,7 +10,21 @@
  *
 */
 
-//= require_self
 //= require vendors/bootstrap.min
 //= require vendors/bootstrap-responsive.min
 //= require_tree .
+//= require_self
+
+/* Thank you Bootstrap docs */
+.navbar a.brand {
+  padding-right: 0;
+  padding-left: 0;
+  margin-left: 20px;
+  float: right;
+  font-weight: bold;
+  color: black;
+  text-shadow: 0 1px 0 rgba(255, 255, 255, .1), 0 0 30px rgba(255, 255, 255, .125);
+  -webkit-transition: all .2s linear;
+  -moz-transition: all .2s linear;
+  transition: all .2s linear;
+}
