--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,4 +1,6 @@
-%h1= current_user.username
-%img{:src => current_user.avatar_url}
-  %p
-    Provider: #{current_user.provider}
+.hero-unit
+  
+  %h1
+    %img{:src => current_user.avatar_url}
+    Welcome,
+    %span= current_user.username
