--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,6 +7,7 @@
     = csrf_meta_tags
   %body
     - if controller_name != 'sessions'
-      %a{:href => "/logout"} Logout
+      = render "layouts/navbar"
+      
     .container
       = yield
