--- a/app/views/puzzles/show.html.haml
+++ b/app/views/puzzles/show.html.haml
@@ -1,9 +1,16 @@
-%p
-  Name:
-  = @puzzle.name
-%p
-  content:
+%h3
   = @puzzle.content
+
+= form_for(@puzzle, :url => "/puzzles/#{@puzzle.id}/take_a_guess") do |f|
+  %p
+    = f.label :guess
+    %br
+    = f.text_area :guess
+
+  = f.submit
+
+
+
 
 = link_to  'Back', puzzles_path
 
