--- a/app/views/puzzles/index.html.haml
+++ b/app/views/puzzles/index.html.haml
@@ -2,7 +2,8 @@
 - @puzzles.each_with_index do |puzzle, index|
   %h3.puzzle
     = (index + 1).to_s + '. '
-    = link_to puzzle.name, puzzle, :class => 'puzzle'
+    - guessed_class = current_user.guessed?(puzzle) ? "done" : ''
+    = link_to puzzle.name, puzzle, :class => "puzzle #{guessed_class}"
     - if current_user.admin?
       = link_to 'Edit', edit_puzzle_path(puzzle)
       = link_to 'Destroy', puzzle, confirm: 'Are you sure?', method: :delete
