Corrections and authenticating admin

--- a/app/assets/stylesheets/login.sass
+++ b/app/assets/stylesheets/login.sass
@@ -21,12 +21,13 @@
     text-align: center
 
     a
+      background-color: #fff
       padding: 20px
       @include rounded(10px)
       display: inline-block
       border: 1px solid #333
       height: 100px
-      margin: 0 20px
+      margin: 20px 20px
       img
         vertical-align: middle
 
