--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -9,5 +9,8 @@
               Logged in via
               %b= current_user.provider
           %li.divider-vertical
+          - if current_user.admin?
+            %li
+              %a{ :href => '/puzzles'} Puzzles
           %li
             %a{ :href => '/logout'} Logout
