--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,7 +6,7 @@
     = javascript_include_tag "application"
     = csrf_meta_tags
   %body
-    - if controller_name != 'sessions'
+    - if current_user and controller_name != 'sessions'
       = render "layouts/navbar"
     .container
       .row
