Changed styling, change rankings routes, added Handlebars and removed nasty html concatenation

--- a/app/assets/stylesheets/ranking.css.scss
+++ b/app/assets/stylesheets/ranking.css.scss
@@ -21,6 +21,10 @@ body {
 
       td {
         text-align: center;
+
+        &.name {
+          font-weight: bold;
+        }
       }
 
       tr {
