Adding the Ranking option

--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -10,6 +10,8 @@
               %b= current_user.provider
           %li.divider-vertical
           %li
+            %a{ :href => '/rankings'} Ranking
+          %li
             %a{ :href => '/puzzles'} Puzzles
           %li
             %a{ :href => '/logout'} Logout
