--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -1,7 +1,7 @@
 .navbar
   .navbar-inner
     .container
-      %a.brand{:href => "/"} Hackstrap
+      %a.brand{:href => "/"} Puzzle Festival
       .nav-collapse
         %ul.nav
           %li
