--- a/app/assets/stylesheets/login.sass
+++ b/app/assets/stylesheets/login.sass
@@ -3,14 +3,8 @@
 .navbar
   ul
     li
-      span.inactive
-        float: none
-        display: block
-        padding: 10px 10px 11px
-        line-height: 19px
+      a.home
         color: #fff
-        text-decoration: none
-        text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25)
 
 .login
   h1
