Small correction to styles

--- a/app/assets/stylesheets/style.sass
+++ b/app/assets/stylesheets/style.sass
@@ -4,6 +4,9 @@ body
   background: url('/assets/bg-noise.jpg') repeat
   color: $font-color
 
+  > .container
+    padding-top: 20px
+
 h1, h2, h3
   color: $font-color
   font-weight: normal
