--- a/app/views/puzzles/_form.html.haml
+++ b/app/views/puzzles/_form.html.haml
@@ -24,4 +24,4 @@
         - @puzzle.errors.full_messages.each do |msg|
           %li= msg
   .actions
-    = f.submit
+    = f.submit :class => 'btn'
