--- a/app/views/puzzles/index.html.haml
+++ b/app/views/puzzles/index.html.haml
@@ -1,13 +1,20 @@
+.actions
+  - if current_user.admin?
+    = link_to 'New Puzzle', new_puzzle_path, :class => 'btn btn-primary'
 
-- @puzzles.each_with_index do |puzzle, index|
-  %h3.puzzle
-    = (index + 1).to_s + '. '
-    - guessed_class = current_user.guessed?(puzzle) ? "done" : ''
-    = link_to puzzle.name, puzzle, :class => "puzzle #{guessed_class}"
-    - if current_user.admin?
-      = link_to 'Edit', edit_puzzle_path(puzzle)
-      = link_to 'Destroy', puzzle, confirm: 'Are you sure?', method: :delete
+%ul.breadcrumb
+  %li
+    %a{:href => "/"} Home
+    %span.divider /
+  %li.active
+    %a{:href => "/puzzles"} Puzzles
 
-- if current_user.admin?
-  %br
-  = link_to 'New Puzzle', new_puzzle_path
+.puzzles
+  - @puzzles.each_with_index do |puzzle, index|
+    %h3.puzzle
+      = (index + 1).to_s + '. '
+      - guessed_class = current_user.guessed?(puzzle) ? "done" : ''
+      = link_to puzzle.name, puzzle, :class => "puzzle #{guessed_class}"
+      - if current_user.admin?
+        = link_to 'Edit', edit_puzzle_path(puzzle), :class => 'btn'
+
