--- a/app/views/puzzles/_form.html.haml
+++ b/app/views/puzzles/_form.html.haml
@@ -1,17 +1,18 @@
 = form_for(@puzzle) do |f|
   %p
     = f.label :name
-    %br
     = f.text_field :name
 
   %p
     = f.label :content
-    %br
+    %span.help-block
+      You can use 
+      %a{ :href => 'http://daringfireball.net/projects/markdown/syntax' }
+        Markdown
     = f.text_area :content
 
   %p
     = f.label :answer
-    %br
     = f.text_area :answer
 
   - if @puzzle.errors.any?
