Added sexy provider logos

--- a/app/assets/stylesheets/login.sass
+++ b/app/assets/stylesheets/login.sass
@@ -5,6 +5,11 @@
     li
       a.home
         color: #fff
+        img
+          vertical-align: middle
+          width: 20px
+          @include rounded(10px)
+          margin-top: -5px
 
 .login
   h1
