Pimping the hero unit

--- a/app/assets/stylesheets/login.sass
+++ b/app/assets/stylesheets/login.sass
@@ -31,8 +31,12 @@
         vertical-align: middle
 
 .hero-unit
+  padding: 20px
+
+.hero-unit.home
 
   h1
+    font-size: 40px
     line-height: 100px
   span
     line-height: 100px
