--- a/app/assets/stylesheets/puzzles.sass
+++ b/app/assets/stylesheets/puzzles.sass
@@ -39,6 +39,9 @@ input[type='text']
 
 .answer
   margin: 10px 0px
+  .hero-unit
+    p
+      padding-left: 60px
   h1
     font-weight: bold
     .green
