--- a/app/assets/stylesheets/style.sass
+++ b/app/assets/stylesheets/style.sass
@@ -7,6 +7,10 @@ body
   > .container
     padding-top: 20px
 
+.alert
+  font-size: 18px
+  font-weight: bold
+
 h1, h2, h3
   color: $font-color
   font-weight: normal
