--- a/app/views/puzzles/show.html.haml
+++ b/app/views/puzzles/show.html.haml
@@ -33,7 +33,7 @@
           You gave a correct answer after
           - count = current_user.guess_count_for_puzzle(@puzzle)
           = count
-          = count == 1 ? "guess" ? "guesses"
+          = count == 1 ? "guess" : "guesses"
     - else
 
       = form_tag("/puzzles/#{@puzzle.id}/take_a_guess", :method => :put) do
