Added ranking to home page

--- a/app/views/rankings/show.html.haml
+++ b/app/views/rankings/show.html.haml
@@ -1,18 +1,1 @@
-.page-header
-  %h1
-    Current Standings
-
-%table.table-bordered.table-striped#standings
-  %thead
-    %tr
-      %th.rank
-      %th.name  Name
-      %th.count Score
-  %tbody
-    %tr
-      %td ..
-      %td ..
-      %td ..
-
-%script{ :id => "score-template", :type => "text/x-handlebars-template" }
-  == <tr class="{{ rowClass }}"><td>{{ standing }}</td><td class="name">{{ name }}</td><td>{{ score }}</td></tr>
+= render "rankings/ranking"
