--- a/app/views/rankings/show.html.haml
+++ b/app/views/rankings/show.html.haml
@@ -1,1 +1,8 @@
+%ul.breadcrumb
+  %li
+    %a{:href => "/"} Home
+    %span.divider /
+  %li.active
+    %a{:href => "/rankings"} Ranking
+
 = render "rankings/ranking"
