Show the puzzle submitter

--- a/app/assets/stylesheets/puzzles.sass
+++ b/app/assets/stylesheets/puzzles.sass
@@ -24,6 +24,8 @@ input[type='text']
       color: $font-color
 
 .puzzle
+  .author
+    font-style: italic
   h1
     a.puzzle
       line-height: 32px
