--- a/app/views/puzzles/show.html.haml
+++ b/app/views/puzzles/show.html.haml
@@ -18,7 +18,11 @@
 
 .puzzle
   %h1= @puzzle.name
-  .author= @puzzle.user.try(:username)
+  - if @puzzle.user
+    .author
+      Submitted by
+      %b
+        = @puzzle.user.username
   .content= markdown @puzzle.content
   - if current_user.admin?
     = link_to 'Edit', edit_puzzle_path(@puzzle), :class => 'btn'
