--- a/app/views/puzzles/show.html.haml
+++ b/app/views/puzzles/show.html.haml
@@ -27,7 +27,8 @@
     Solved by
     %b
       = @puzzle.guesses.solved.count
-    users
+    users:
+    = raw @puzzle.guesses.solved.collect { |guess| link_to(guess.user.username, user_path(guess.user)) }.join(',')
   .content= markdown @puzzle.content
   - if current_user.admin?
     = link_to 'Edit', edit_puzzle_path(@puzzle), :class => 'btn'
